--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <div class="row">
         <div class="about-text col-lg-8">
           <h2>About Us</h2>
-          <p><strong>Enrico Neri's</strong> wine is present within the national and international markets since 2006. This is a family business: the father is in charge of the vineyards care, the son, Enrico, makes the wine in the winery, where a third of the best grapes produced are processed. Theirs is a boutique production of about 50.000 bottles per year mainly based on white and red wine, along with the precious Noble Rot well known worldwide as the best expression of dessert wine.
+          <p><strong>The Winery's</strong> wine is present within the national and international markets since 2006. This is a family business: the father is in charge of the vineyards care, the son, Enrico, makes the wine in the winery, where a third of the best grapes produced are processed. Theirs is a boutique production of about 50.000 bottles per year mainly based on white and red wine, along with the precious Noble Rot well known worldwide as the best expression of dessert wine.
             <br>
             The winery is equipped with all the essential instruments to guarantee an efficient vinification process. Each variety is kept separately in temperature controlled stainless steel tanks. </p>
         </div>
